adds swagger to notices
